get user data by username endpoint